examples/nameresolution/Trait.an
trait Foo a b with
    foo: fn a -> b
    bar: a

// error: missing definition of foo
impl foo_i32_string: Foo I32 String with
    foo _x = "test"
    baz = 2

main () =
    foo 3
    bar : Unit

// args: --check
// expected stderr:
// examples/nameresolution/Trait.an:11:4	error: `foo` is not defined, was it a typo?
//     foo 3
// 
// examples/nameresolution/Trait.an:12:4	error: `bar` is not defined, was it a typo?
//     bar : Unit

